# silnlp

./: .gitignore  1  CLOWDER_README.md  Dockerfile  Gemini_combine_scores.txt  LICENSE  README.md  _config.yml  backblaze_bucket_setup.sh  bucket_setup.md  clear_ml_linux_setup.md  clear_ml_setup.md  clear_ml_windows_setup.md  docker-apparmor  environment.yml  index.md  manual_setup.md  minio_bucket_setup.sh  pyproject.toml  rclone_setup.sh  s3_bucket_setup.md  s3_bucket_setup.sh  setup.cfg  setup.py  setup_env_vars.sh  usfm.ipynb  usfm_attn.ipynb  usfm_char.ipynb  usfm_other.ipynb  usfm_utils.ipynb
.config/: dotnet-tools.json
.devcontainer/: Dockerfile  devcontainer.json  update_hosts.sh
.github/workflows/: docker-build-push.yml
_data/: topnav.yml
_data/sidebars/: home_sidebar.yml
_includes/: footer.html
assets/Ref/: 15EZRRef.SFM  31OBARef.SFM  33MICRef.SFM  39MALRef.SFM  41MATRef.SFM  46ROMRef.SFM  542THRef.SFM  58PHMRef.SFM  642JNRef.SFM  CommentTags.xml  ProjectProgress.xml
clowder/: clowder  clowder.py  configuration_exception.py  consts.py  environment.py  functions.py  investigation.py  scratch.ipynb  status.py
clowder/clowder/: clowder  consts.py  environment.py  functions.py  investigation.py  status.py
docker-env/cpu-only/: dockerfile
docker-env/gpu/: dockerfile
onboarding-dashboard/: Home.py  Investigations.py  consts.py  ethnologue.py  investigation_utils.py  models.py  pyproject.toml  utils.py
onboarding-dashboard/config-templates/: config.jinja-yml  investigation.csv
onboarding-dashboard/pages/: DeleteInvestigation.py  Down.py  InitialSetUp.py  InvestigationDetails.py  LogIn.py  LogInNoGAuth.py  SetUp.py
pages/: about.md  extract_corpora.md  introduction.md  nmt_preprocess.md  nmt_test.md  nmt_train.md  nmt_translate.md
pdfconfigs/: titlepage.html
pruning/: M2M100Trimmer.py  prune.py
scripts/: analyze_sentences_ebible.py  automate_onboard_project.py  blank_remote_task.py  clean_projects.py  clean_s3.py  clear_clearml_cache.py  filter_dict.py  onboard_project.ipynb  onboarding_requests.py  precompute_nllb_partial_word_constraints.py  scratchpad_exctract.py  scratchpad_s3.py  split_ebible_by_sentence.ipynb  sync_minio_b2.py  tokenize_latin_words.py
scripts/IDQ/: key_terms.ipynb  usfm_eval_eval.ipynb  usfm_placement.ipynb
scripts/bible_alignment/: align_helper.py  scratchpad_align.py  scratchpad_align_analyze.py
scripts/clearml_agent/: clearml.conf  mount_aqua_on_data.bat  rclone.conf  start_clearml_agent.bat
scripts/llms/: .gitignore  Ethnologue.ipynb  Full_pipeline.ipynb  GaLore_Training_NLLB.ipynb  Inference.ipynb  Laura_Full_pipeline.ipynb  Laura_Preprocess_all_scripture.ipynb  Laura_Score_v2.ipynb  Laura_preprocess_dataset_v2.ipynb  Preprocess_all_scripture.ipynb  Score_v2.ipynb  Score_v4.ipynb  Select_pivot_languages.ipynb  Training.ipynb  Training_v2.ipynb  create_credentials.ipynb  preprocess_dataset_v2.ipynb  readPdf.ipynb
scripts/model_reduction/: laserRMT.ipynb  trimmed_token_coverage.ipynb
scripts/rclone/: mount_b2_to_b.bat  mount_minio_to_m.bat  mount_to_s.bat  rclone.conf
scripts/word_filters/: common_string.ipynb  filter_and_sort.ipynb  stopword_filter.ipynb  word_pairs_tsv.ipynb
silnlp/: __init__.py  onboarding_utils.py
silnlp/alignment/: aggregate_results.py  align.py  aligner.py  build_tree.py  bulk_align.py  clear_aligner.py  config.py  dotnet_machine_aligner.py  eflomal.py  fast_align.py  generate_clear_models.py  giza_aligner.py  giza_to_pharaoh.py  group_verses_into_passages.py  ibm4_aligner.py  lexicon.py  machine_aligner.py  metrics.py  preprocess.py  rbo.py  segment_verses.py  test.py  test_size.py  tools.py  utils.py  visualize_similarity.py
silnlp/asr/: experiment.py  hugging_face_config.py  test_whisper_fine_tuning.py
silnlp/assets/: All-metadata.txt  All-vrefs.txt  Major-metadata.txt  Major-vrefs.txt  Pt6-metadata.txt  Pt6-vrefs.txt  SilNt-metadata.txt  SilNt-vrefs.txt  en-All-glosses.txt  en-Major-glosses.txt  en-Pt6-glosses.txt  en-SilNt-glosses.txt  es-Major-glosses.txt  fr-Major-glosses.txt  id-Major-glosses.txt  languageFamilies.json  pt-Major-glosses.txt  standard_alignments.yml  three_to_two.csv  vref.txt
silnlp/common/: add_noise_to_corpus.py  align.py  analyze.py  analyze_quote_convention.py  analyze_quote_convention_tests.py  batch_extract_corpora.py  book_args.py  bulk_extract_corpora.py  bulk_extract_local.py  canon.py  check_books.py  check_books_0.py  check_config_files.py  check_markers.py  check_setup.py  checkconfigfiles.py  clean_projects.py  clean_projects_benchmarking.py  clearml.py  clearml_connection.py  clearml_utils.py  collect_many2many_results_wsl_copy.py  collect_verse_counts.py  combine_align.py  combine_scores.py  combine_scores_save.py  compare_lex.py  compare_lexCR.py  compare_lex_Catapult.py  compare_translations.py  compare_usfm_structure.py  config_utils.py  corpus.py  count_ranges.py  count_verses.py  count_words.py  create_experiment.py  create_experiment_series.py  create_experiments.py  create_many2many_experiments.py  (+63 more)
silnlp/nmt/: __init__.py  alphabetSimilarity.py  alphabet_similarity.py  analyze.py  analyze_project_pairs.py  augment.py  average_checkpoints.py  check_train_val_test_split.py  clearml_connection.py  clearml_experiment.py  config.py  config_utils.py  corpora.py  corpus.py  corpus_pairs_config.py  decoding.py  diff_predictions.py  exp_summary.py  experiment.py  export.py  export_embeddings.py  hugging_face_config.py  infer.py  infer_google.py  langs_config.py  llm_config.py  multi_score.py  nllb_web_demo.py  noise.py  onmt_tf_multilingual_preprocess.py  onmt_tf_train.py  open_nmt_config.py  postprocess.py  preprocess.py  quality_estimation.py  ref_inputter.py  replace_embeddings.py  runner.py  score_translations.py  segment_length.py  (+14 more)
tests/: .gitattributes  __init__.py  helper.py  test_create_onboarding_experiments.py  test_extract_corpora.py  test_preprocess.py  test_script_utils.py
wheels/: sentencepiece-0.1.97-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  sentencepiece-0.1.97-cp38-cp38-win_amd64.whl
(+292 files in other folders)
