[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
line_length = 120

[tool.poetry]
name = "silnlp"
version = "1.0.0"
description = ""
authors = ["SIL International"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.0.4"
sentencepiece = "^0.1.97"
nltk = "^3.5"
python-dotenv = "0.20.0"
seaborn = "0.11.2"
morfessor = "^2.0.6"
Morfessor-FlatCat = "^1.0.8"
psutil = "^5.7.3"
scikit-learn = "1.1.2"
numpy = "^1.23.1"
OpenNMT-tf = "^2.23.0"
annoy = "^1.17.0"
lit-nlp = "0.4.1"
tensorflow = "2.7.3"
google-cloud-translate = "^3.0.2"
scipy = "1.8"
clearml = ">=1.4.1"
XlsxWriter = "^1.4.3"
python-Levenshtein = "^0.12.2"
lxml = "^4.6.3"
tqdm = "^4.62.2"
s3path = "0.3.4"
sacrebleu = "2.2.0"
ctranslate2 = "2.21.1"
tensorflow-addons = "0.17.1"
libclang = "14.0.6"
sil-machine = {extras = ["thot"], version = "^0.9.0"}
transformers = "^4.23.1"
datasets = "^2.7.1"
torch = {version = "1.10.1", source = "torch"}
sacremoses = "^0.0.53"
evaluate = "^0.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^22.6.0"
flake8 = "^3.9.0"
ipykernel = "^6.4.1"
pylint = "^2.8.3"
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu111"
default = false
secondary = true

