[tool.poetry]
name = "onboarding-dashboard"
version = "0.0.0"
description = ""
authors = ["SIL International"]
[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "^1.0.4"
sentencepiece = "^0.1.97"
nltk = "^3.5"
python-dotenv = "0.20.0"
seaborn = "0.11.2"
morfessor = "^2.0.6"
Morfessor-FlatCat = "^1.0.8"
psutil = "^5.7.3"
scikit-learn = "1.1.2"
numpy = "^1.23.1"
OpenNMT-tf = "^2.31.0"
lit-nlp = "0.4.1"
google-cloud-translate = "^3.0.2"
scipy = "1.8"
clearml = ">=1.4.1"
lxml = "^4.6.3"
tqdm = "^4.62.2"
s3path = "0.3.4"
sacrebleu = "^2.3.1"
sil-machine = {extras = ["thot"], version = "^1.0.2"}
datasets = "^2.7.1"
sacremoses = "^0.0.53"
evaluate = "^0.3.0"
python-docx = "^0.8.11"
iso639-lang = "^2.1.0"
eflomal = { version = "^0.1", optional = true }
transformers = "^4.36.2"
google = "^3.0.0"
google-api-python-client = "^2.101.0"
google-auth-oauthlib = "^1.0.0"
oauth2client = "^4.1.3"
gspread = "^5.11.2"
pydrive2 = "^1.17.0"
jinja2 = "^3.1.2"
typer = "^0.9.0"
rich = "^13.7.0"
gspread-dataframe = "^3.3.1"
openpyxl = "^3.1.2"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"
black = "^22.6.0"
flake8 = "^3.9.0"
ipykernel = "^6.4.1"
pylint = "^2.8.3"
pytest = "^6.2.4"
types-tqdm = "^4.62.4"
pandas-stubs = "^1.0.4"
types-regex = "^2023.10.3.0"
lxml-stubs = "^0.4.0"
mypy = "^1.7.1"
deptry = "^0.16.1"

[tool.poetry.extras]
eflomal = ["eflomal"]